...
                android:layout_height="wrap_content"
                android:text="@string/need_to_signIn_text"
                android:layout_marginTop="10dp"
                android:gravity="center"
                />
            <Button
                android:id="@+id/signIn_btn_transition"
                android:layout_width="100dp"
                android:layout_height="55dp"
                android:textAllCaps="false"
                android:layout_gravity="center"
                android:onClick="signInBtnTransition"
                android:textColor="@color/white"
...
